--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -248,7 +248,7 @@ $breadcrumbs-item-slash: true;
 // 11. Button
 // ----------
 
-$button-padding: rem-calc(15 23);
+$button-padding: rem-calc(15);
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $primary-color;
